# ZwiftToCSV

./: .gitignore  7_ZWIRCUS.py  README.md  packages.txt  pages.toml  pyproject.toml  railway.json  requirements.txt  streamlit_app.py  utils.py  zp_fetch.py  zr.py  zw_fetch.py
app_pages/: 2_Team_Data.py  3_Results.py  4_Profiles.py  5_Zwift.py  6_Misc.py  7_ZWIRCUS.py  8_ZwiftRacing.py  Zwift2CSV.py
pages/: 2_Team_Data.py  3_Results.py  4_Misc.py  4_Profiles.py  5_Zwift.py  6_Misc.py  7_ZWIRCUS.py  8_ZwiftRacing.py
tests/: test_fetch.py
tests/data/: prime.json
